--- a/index.html
+++ b/index.html
@@ -4,9 +4,126 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css">
     <title>teste</title>
 </head>
+
+<header>
+<img class="banner" src="imagens/viagembanner.jpg" alt="banner">
+
+<div class="linha">
+<div class="pai">
+    <div class="filha"><a class="lk" href="https://www.viajecomigo.com/">DESTINOS</a></div>
+    <div class="filha"><a class="lk" href="https://www.viajecomigo.com/category/a-cidade-vista-por-dentro/">DICAS</a></div>
+    <div class="filha"><a class="lk" href="https://www.viajecomigo.com/category/noticias/">NOTÍCIAS</a></div>
+
+
+
+</div>
+
+</div>
+
+</header>
+
 <body>
-    <h1>hello world!!</h1>
+
+<div class="pait">
+    <div class="titulo">
+<h1>MELHORES DESTINOS PARA SUA VIAGEM</h1>
+   </div>
+</div>
+<br>
+<div class="containerpor">    
+
+  
+   <img class="img" src="imagens/vilageres.jpg" alt=""> 
+
+  <div class="itempor">
+   <h1>VISITAR A VILA DO GERÊS, PORTUGAL</h1>
+
+    <p>
+No norte de Portugal, a Vila do Gerês é um lugar muito turístico, no concelho de Terras de Bouro. A sua fama é já antiga e vem das termas, com água medicinais, que levam inúmeras pessoas a esta pitoresca vila inserida no Parque Nacional da Peneda-Gerês. No vale do rio Gerês, a vila é conhecida pelas fontes termais e a proximidade da serra que lhe dá um ambiente muito saudável, convidando a caminhadas pelos percursos e trilhos assinalados.
+    </p>
+
+     <p>
+Se no Inverno o Gerês é procurado pela sua acalmia, e até o ar fresco da serra, no verão são as cascatas que chamam os turistas e, sendo época alta, há muito maior procura e os preços de alojamentos são mais elevados. Mas o verão é a única altura quente e que dá para aproveitar para mergulhos, seja em piscinas ao ar livre, seja nas afamadas cascatas
+    </p>
+    </div>
+
+</div>
+
+<br>
+<br>
+<br>
+
+<div class="containerasia">
+    <img class="img" src="imagens/asia.jpg" alt="">
+
+<div class="itemasia">
+    <h1>VIAJAR PARA O CAMBOJA</h1>
+    <p>
+  Praias paradisíacas, riqueza cultural, população acolhedora e o maior complexo de templos já construídos, os templos de Angkor… Estes são apenas alguns dos pontos que atraem muitos visitantes ao Camboja. Este país do Sudeste Asiático faz fronteira com a Tailândia a noroeste, com o Laos a nordeste, com o Vietname a leste e com o Golfo da Tailândia a sudoeste. Frequentemente integra o circuito Laos – Camboja – Vietname, mas vale uma visita por si só. Vamos mostrar-lhe porquê!
+    </p>
+    <p>
+        Por muito pacífico que sempre tenha sido, o Camboja não conseguiu evitar envolver-se na Guerra do Vietname. Em 1944, o Camboja proclamou a sua independência, embora só a tenha conquistado totalmente em 1953 e, nessa altura, tentou manter a sua neutralidade face à guerra. No entanto, os vietnamitas utilizavam o território vizinho para abastecer as forças que operavam no Sul do Vietname (passavam regularmente pelo Camboja através da famosa trilha de Ho Chi Minh), o que o obrigou a envolver-se na guerra. Em 1970, os EUA bombardearam grande parte do país. Em 1976 foi proclamada a República Democrática do Camboja e no ano seguinte, o Partido Comunista do Camboja (Khmer Vermelho) foi oficialmente reconhecido como o corpo governativo do país. A partir daí o país passou por um período de muitos conflitos, miséria, doenças, fome e genocídio, praticado pelo regime. Finalmente em 1991 foi assinado um acordo de paz sob os auspícios da ONU (Organização das Nações Unidas). A partir desse momento, o país começou a reerguer-se e a desenvolver-se economicamente.
+    </p>
+</div>
+</div>
+
+<br>
+<br>
+<br>
+
+<div class="containeregito">
+    <img class="img" src="imagens/egito.jpg" alt="">
+
+    <div class="itemegito">
+    <h1>VIAJAR PARA O EGITO</h1>
+    <p>
+     O Egito, no norte de África, é um país com uma das histórias mais ricas e mais replicadas em filmes e livros por todo o mistério envolvente. As pirâmides, os faraós, as esfinges e os hieróglifos são as imagens que nos ocorrem deste país, cuja História continua a ser desvendada cada vez que se descobrem tumbas e múmias com mais de 4 mil anos! A cada nova escavação há algo novo para mostrar e civilizações milenares para serem reveladas.
+    </p>
+    <p>
+        As Pirâmides de Guiza/Gizé são umas das 7 Maravilhas do Mundo e a única da lista intacta. Os mistérios desta civilização passam pelas construções das pirâmides, pois não se sabe que métodos utilizaram para as construírem, colocando 2 milhões de blocos de pedras, a pesarem toneladas! Cleópatra, da dinastia dos Ptolomeus, é também uma das figuras de destaque – embora não fosse egípcia – tal como Tutankamón, principalmente pela sua morte. Vários arqueólogos morreram aquando da descoberta do seu túmulo, o que causou grande polémica. Porquê? A lenda contava que seria por terem perturbado o seu sono… cientificamente foi explicado, mais tarde, que as doenças e mortes seriam causadas por um fungo lá presente.
+    </p>
+</div>
+
+</div>
+
+
+
+
+
+<footer>
+<div class="sociais">
+<h1 class="viajar">VIAJE AGORA!</h1>
+REDES SOCIAIS:
+</div>
+<br>
+<div class="foot">
+    
+<div>
+<a href="https://www.instagram.com">
+  <img class="redes" src="imagens/insta.webp">
+</a>
+</div>
+
+<div>
+<a href="https://www.facebook.com/campaign/landing.php?&campaign_id=1661784632&extra_1=s%7Cc%7C320269324047%7Ce%7Cfacebook%7C&placement=&creative=320269324047&keyword=facebook&partner_id=googlesem&extra_2=campaignid%3D1661784632%26adgroupid%3D63686352403%26matchtype%3De%26network%3Dg%26source%3Dnotmobile%26search_or_content%3Ds%26device%3Dc%26devicemodel%3D%26adposition%3D%26target%3D%26targetid%3Dkwd-541132862%26loc_physical_ms%3D9101552%26loc_interest_ms%3D%26feeditemid%3D%26param1%3D%26param2%3D&gclid=EAIaIQobChMI-eKd27Xq_AIVQkBIAB34Kg_lEAAYASAAEgJ5kPD_BwE">
+    <img class="redes" src="imagens/face.webp" alt="">
+</a>
+</div> 
+
+<div>
+<a href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoicHQifQ%3D%3D%22%7D">
+<img class="redes" src="imagens/twitter.webp" alt="">
+</a>
+</div>
+
+</div>
+
+</footer>
+
+
+
 </body>
 </html>
